<?xml version="1.0"?>
<package>
  <name>communication_tests</name>
  <version>0.0.1</version>
  <description>Tests on the realtime capabilities of the ROS publish/subscribe communication mechanism</description>

  <maintainer email="jonas.sticha@bmw-carit.de">Jonas Sticha</maintainer>
  <license>BSD</license>
  <author email="jonas.sticha@bmw-carit.de">Jonas Sticha</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
